Add a commentary in HTML, and styled CSS with a comments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         </p>
 
         <h2>Опыт работы</h2>
-
+        <!-- Некрасивые отступы
+            p, h2, h3, p, ul, h3 итд, 
+            Они же находятся в <div id="main">, а значит братья. Должны быть на одном уровне)
+         -->
           <h3>Первое место работы</h3>
             <p>Какой-то опыт работы</p>
             <ul>
@@ -54,7 +57,8 @@
           </ul>
     </div>
 
-    <div id="footer">
+    <div id="footer"> 
+        <!-- <br /> лучше не использовать. А "Альберт Мартиросян" лучше положить в заголовок. Тогда и <br /> не понадобится  -->
         <strong>Альберт Мартиросян</strong>
         <br/>
         Ташкент, Узбекистан, <a href="mailto:albert.edvich@gmail.com">albert.edvich@gmail.com</a>
